corrected horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ html, body {
 }
 
 h1 {
-    font-size: 285%;
+    font-size: 275%;
     color: white;
     font-family: Cinzel;
 }
@@ -37,12 +37,13 @@ h1 {
     justify-content: center;
     align-items: center;
     position: relative;
+    width: 100%;
 }
 
 #a {
     background: aqua;
-    width: 3%;
-    padding: 3%;
+    width: 2vw;
+    padding: 2vw;
     position: absolute; 
     animation-name: a;
     animation-iteration-count: infinite;
@@ -57,16 +58,16 @@ h1 {
     20% {left: 36vw; top: 30vh;}
     40% {left: 0vw; top: 20vh;}
     60% {left: 40vw; top: 0vh;}
-    75% {left: 68vw; top: 88vh;}
+    75% {left: 68vw; top: 100vh;}
     82% {left: 93vw; top: 50vh;}
-    90%{left: 44vw; top: 88vh;}
+    90%{left: 44vw; top: 100vh;}
     100% {left: 0vw; top: 0vh;}
 }
 
 #b {
     background: rgb(255, 0, 191);
-    width: 7%;
-    padding: 7%;
+    width: 7vw;
+    padding: 7vw;
     position: absolute; 
     animation-name: b;
     animation-iteration-count: infinite;
@@ -78,7 +79,7 @@ h1 {
 
 @keyframes b {
     0% {right: 0vw; top: 0vh;}
-    20% {right: 44vw; top: 30vh;}
+    20% {right: 44vw; top: 100vh;}
     40% {right: 0vw; top: 8vh;}
     60% {right: 66vw; top: 63vh;}
     65% {right: 62vw; top: 71vh;}
@@ -100,8 +101,9 @@ h1 {
 }
 
 @keyframes c {
-    0% {left: 45vw; top: 0vh;}
-    20% {left: 60vw; top: 80vh;}
+    /* 0% {left: 45vw; top: 0vh;} */
+    0% {left: 45%; top: 0%;}
+    20% {left: 60%; top: 80%;}
     40% {left: 0vw; top: 35vh;}
     60% {left: 12vw; top: 52vh;}
     80% {left: 0vw; top: 30vh;}
@@ -112,7 +114,7 @@ h1 {
 
     color: white;
     text-align: center;
-    width: 40%;
+    width: 60%;
     position: absolute; 
 
 }
@@ -129,8 +131,12 @@ h1 {
     align-items: center;
     justify-content: center;
     color: white;
-    padding: 2%;
-    font-size: 100%;
+    font-size: 80%;
+    padding-top: 1%;
+    padding-bottom: 1.5%;
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 100%;
 }
 
 a:link {text-decoration: none; color: white;}
@@ -212,13 +218,13 @@ a:link {text-decoration: none; color: white;}
 
 hr {
     background-color: white;
-    width: 90%;
+    max-width: 50vw;
 }
 
 #tag {
     color: white;
     text-align: center;
-    font-size: 28px;
+    font-size: 150%;
     font-family: Dancing Script;
 }
 
